# rustboard

./: Cargo.toml  Dioxus.toml  Makefile.toml  README.md  package.json  tailwind.config.js
example_data/: datapackage.json
src/: dashboard.rs  datapackage.rs  main.rs
