[package]
name = "backboard"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5", features = ["web"] }
manganis = "0.2.2"
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.11.27", features = ["json"] }
serde_json = "1.0.115"
serde_derive = "1.0.197"