[package]
name = "backboard"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5", features = ["web"] }
manganis = "0.2.2"
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.11.27", features = ["json"] }
serde_json = "1.0.115"
serde_derive = "1.0.197"
wasm-timer = "0.2.5"
gloo = "0.11.0"
futures-util = "0.3.30"
wasm-bindgen-futures = "0.4.42"
gloo-timers = { version = "0.3.0", fieatures = ["futures"], features = ["futures"] }
